--- a/res/rtorrent/rtorrent.rc
+++ b/res/rtorrent/rtorrent.rc
@@ -19,6 +19,10 @@ peer_exchange = yes
 # Authorize UDP trackers
 use_udp_trackers = yes
 
+# Run rTorrent as a daemon, controlled via XMLRPC.
+#
+#system.daemon.set = true
+
 # Enable encryption when possible
 encryption = allow_incoming,try_outgoing,enable_retry
 
